<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/textView_schoolName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/schoolName" />

    <EditText
        android:id="@+id/editText_schoolName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/schoolNameHint"
        android:inputType="none|text" />

    <TextView
        android:id="@+id/textView_district"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/district" />

    <Spinner
        android:id="@+id/spinner_district"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:entries="@array/district_array" />

    <TextView
        android:id="@+id/textView_schoolLevel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/schoolLevel" />

    <Spinner
        android:id="@+id/spinner_schoolLevel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:entries="@array/schoolLevel_array" />

    <TextView
        android:id="@+id/textView_fianceType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/fianceType" />

    <Spinner
        android:id="@+id/spinner_fianceType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:entries="@array/financeType_array" />

    <TextView
        android:id="@+id/textView_studentsGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/studentGender" />

    <Spinner
        android:id="@+id/spinner_studentsGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:entries="@array/studentGender_array" />

    <TextView
        android:id="@+id/textView_religion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/religion" />

    <Spinner
        android:id="@+id/spinner_religion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:entries="@array/religion_array" />

    <TextView
        android:id="@+id/textView_session"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/session" />

    <Spinner
        android:id="@+id/spinner_session"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:entries="@array/session_array" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/submit" />

</LinearLayout>