<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:id="@+id/infoContent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/schoolNo"
            android:textColor="#3700B3"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/schoolNo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="#3700B3"
            android:textSize="16sp" />
    </LinearLayout>
    <!--
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
    -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/schoolName"
        android:textColor="#3700B3"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/schoolName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textSize="16sp" />
    <!--
        </LinearLayout>
    -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/studentGender"
            android:textColor="#3700B3"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/studentsGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/session"
            android:textColor="#3700B3"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/session"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/fianceType"
            android:textColor="#3700B3"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/financeType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/schoolLevel"
            android:textColor="#3700B3"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/schoolLevel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/telephone"
            android:textColor="#3700B3"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/telephone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/faxNumber"
            android:textColor="#3700B3"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/faxNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/religion"
            android:textColor="#3700B3"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/religion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/website"
            android:textColor="#3700B3"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/website"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:autoLink="web" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/district"
            android:textColor="#3700B3"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/district"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textColor="#3700B3"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000" />
    </LinearLayout>

    <Button
        android:id="@+id/showMap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/showMap" />

</LinearLayout>